--- a/site/origemP.html
+++ b/site/origemP.html
@@ -11,29 +11,43 @@
     
     <style>
     body{
+    /*a tag background-color está servindo para definir a cor de fundo da página.*/
     background-color: #A52A2A;
     }
     img{
+    /*a tag margin está servindo para inserir um espaçamento externo ao elemento.*/
     margin: 0px 360px 0px 360px;
     }
     p{
+    /*a tag margin está servindo para inserir um espaçamento externo ao elemento.*/
     margin: 20px 300px 20px 300px;
+    /*a tag font-family está servindo para definir a fonte da letra da palavra.*/
     font-family: "Calibri", "Arial";
+    /*a tag font-size está servindo para definir o tamanho da letra da palavra.*/
     font-size: 15px;
+    /*a tag color está servindo para mudar a cor da letra da palavra.*/
     color: white;
     }
     h2{
+    /*a tag font-family está servindo para definir a fonte da letra da palavra.*/
     font-family: "Broadway", "Arial Black";
+    /*a tag font-size está servindo para definir o tamanho da letra da palavra.*/
     font-size: 25px;
+    /*a tag margin está servindo para inserir um espaçamento externo ao elemento.*/
     margin: 20px 300px 20px 300px;
+    /*a tag color está servindo para mudar a cor da letra da palavra.*/
     color: white;
     }
     .img1{
+    /*a tag width está servindo para determinar a largura da área de conteúdo do elemento.*/
     width: 300px;
+    /*a tag heigth está servindo para definir o tamanho vertical ocupado pelo elemento na tela do navegador.*/
     height: 300px;
+    /*a tag margin está servindo para inserir um espaçamento externo ao elemento.*/
     margin: 20px 500px 10px 500px;
     }
     #nav{
+    /*a tag margin está servindo para inserir um espaçamento externo ao elemento.*/
     margin: 5px 580px 20px 580px;
     }
     </style>
