--- a/site/simbolos.html
+++ b/site/simbolos.html
@@ -10,27 +10,39 @@
     <title>O Significado dos Símbolos Natalinos</title>
     <style>
     body{
+    /*a tag background-color está servindo para definir a cor de fundo da página.*/
     background-color: #3CB371;
     }
     img{
+    /*a tag margin está servindo para inserir um espaçamento externo ao elemento.*/
     margin: 0px 360px 0px 360px;
     }
     #nav{
+    /*a tag margin está servindo para inserir um espaçamento externo ao elemento.*/
     margin: 5px 580px 20px 580px;
     }
     p{
+    /*a tag margin está servindo para inserir um espaçamento externo ao elemento.*/
     margin: 20px 300px 20px 300px;
+    /*a tag font-family está servindo para definir a fonte da letra da palavra.*/
     font-family: "Calibri", "Arial";
+    /*a tag font-size está servindo para definir o tamanho da letra da palavra.*/
     font-size: 15px;
+    /*a tag color está servindo para mudar a cor da letra da palavra.*/
     color: white;
     }
     #img{
+    /*a tag margin está servindo para inserir um espaçamento externo ao elemento.*/
     margin: 5px 100px 5px 100px;
     }
     #p{
+    /*a tag margin está servindo para inserir um espaçamento externo ao elemento.*/
     margin: 5px 20px 20px 20px;
+    /*a tag font-family está servindo para definir a fonte da letra da palavra.*/
     font-family: "Calibri", "Arial";
+    /*a tag font-size está servindo para definir o tamanho da letra da palavra.*/
     font-size: 20px;
+    /*a tag color está servindo para mudar a cor da letra da palavra.*/
     color: white;
     }
     </style>
