--- a/site/telaOpcoes.html
+++ b/site/telaOpcoes.html
@@ -10,41 +10,57 @@
     <title>Tela 2</title>
     <style>
     body{
-    background-color: #696969;
+    /*a tag background-color está servindo para definir a cor de fundo da página.*/
+    background-color: #3CB371;
     }
     .t{
+    /*a tag font-family está servindo para definir a fonte da letra da palavra.*/
     font-family: "Broadway";
+    /*a tag font-size está servindo para definir o tamanho da letra da palavra.*/
     font-size: 30px;
+    /*a tag margin está servindo para inserir um espaçamento externo ao elemento.*/
     margin: 10px;
+    /*a tag color está servindo para mudar a cor da letra da palavra.*/
     color: red;
     }
     p{
+    /*a tag margin está servindo para inserir um espaçamento externo ao elemento.*/
     margin: 20px 300px 20px 300px;
+    /*a tag font-family está servindo para definir a fonte da letra dos parágrafos.*/
     font-family: "Calibri", "Arial";
+    /*a tag font-size está servindo para definir o tamanho da letra dos parágrafos.*/
     font-size: 15px;
+    /*a tag color está servindo para mudar a cor da letra dos parágrafos.*/
     color: white;
     }
     b{
+    /*a tag color está servindo para mudar a cor da letra das palavras em negrito.*/
     color: red;
+    /*a tag font-family está servindo para definir a fonte da letra das palavras em negrito.*/
     font-family: "Arial Black", Arial;
     }
-    .pF{
-    color: red;
-    }
     #img1{
+    /*a tag width está servindo para determinar a largura da área de conteúdo do elemento.*/
     width: 400px;
+    /*a tag heigth está servindo para definir o tamanho vertical ocupado pelo elemento na tela do navegador.*/
     height: 400px;
+    /*a tag margin está servindo para inserir um espaçamento externo ao elemento.*/
     margin: 20px 450px 0px 450px;
     }
     #img2{
+    /*a tag width está servindo para determinar a largura da área de conteúdo do elemento.*/
     width: 400px;
+    /*a tag heigth está servindo para definir o tamanho vertical ocupado pelo elemento na tela do navegador.*/
     height: 400px;
+    /*a tag margin está servindo para inserir um espaçamento externo ao elemento.*/
     margin: 20px 470px 0px 470px;
     }
     #texto{
+    /*a tag margin está servindo para inserir um espaçamento externo ao elemento.*/
     margin: 5px 505px 0px 505px;
     }
     #nav{
+    /*a tag margin está servindo para inserir um espaçamento externo ao elemento.*/
     margin: 5px 580px 20px 580px;
     }
     </style>
