--- a/site/origem.html
+++ b/site/origem.html
@@ -4,7 +4,6 @@
     <!-- Meta tags Obrigatórias -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
@@ -12,36 +11,53 @@
     
     <style>
     body{
-    background-color: #A9A9A9;
+    /*a tag background-color está servindo para definir a cor de fundo da página.*/
+    background-color: #A52A2A;
     }
     img{
+    /*a tag margin está servindo para inserir um espaçamento externo ao elemento.*/
     margin: 0px 480px 0px 480px;
     }
     h2{
+    /*a tag font-family está servindo para definir a fonte da letra da palavra.*/
     font-family: "Broadway", Arial Black;
+    /*a tag font-size está servindo para definir o tamanho da letra da palavra.*/
     font-size: 30px;
+    /*a tag color está servindo para mudar a cor da letra da palavra.*/
     color: white;
+    /*a tag text-align está servindo para centralizar a palavra.*/
     text-align: center;
+    /*a tag margin está servindo para inserir um espaçamento externo ao elemento.*/
     margin: 10px;
     }
     p{
+    /*a tag margin está servindo para inserir um espaçamento externo ao elemento.*/
     margin: 20px 300px 20px 300px;
+    /*a tag font-size está servindo para definir o tamanho da letra da palavra.*/
     font-family: "Calibri", "Arial";
+    /*a tag font-size está servindo para definir o tamanho da letra da palavra.*/
     font-size: 15px;
+    /*a tag color está servindo para mudar a cor da letra da palavra.*/
     color: white;
     }
     #img1{
+    /*a tag width está servindo para determinar a largura da área de conteúdo do elemento.*/
     width: 370px;
+    /*a tag heigth está servindo para definir o tamanho vertical ocupado pelo elemento na tela do navegador.*/
     height: 370px;
+    /*a tag margin está servindo para inserir um espaçamento externo ao elemento.*/
     margin: 20px 470px 0px 470px;
     }
     #texto{
+    /*a tag margin está servindo para inserir um espaçamento externo ao elemento.*/
     margin: 5px 420px 0px 420px;
     }
     .p{
+    /*a tag color está servindo para mudar a cor da letra da palavra.*/
     color: black;
     }
     #nav{
+    /*a tag margin está servindo para inserir um espaçamento externo ao elemento.*/
     margin: 5px 580px 20px 580px;
     }
     
@@ -80,20 +96,21 @@
     <p>A história do Natal está descrita na Bíblia, nos evangelhos de Mateus e Lucas. De acordo com a história do Natal 
     descrita na Bíblia, Jesus nasceu em Belém, em um estábulo.  Um dos textos mais conhecidos sobre o Natal se encontra 
     na Bíblia, em Lucas 2:1-14:</p>
-    <p class="p"><i>Naqueles dias, César Augusto publicou um decreto ordenando o recenseamento de todo o império romano. Este 
+    <p class="p"><i><b>Naqueles dias, César Augusto publicou um decreto ordenando o recenseamento de todo o império romano. Este 
     foi o primeiro recenseamento feito quando Quirino era governador da Síria. E todos iam para a sua cidade natal, a 
     fim de alistar-se. Assim, José também foi da cidade de Nazaré da Galileia para a Judeia, para Belém, cidade de Davi, 
     porque pertencia à casa e à linhagem de Davi. Ele foi a fim de alistar-se, com Maria, que lhe estava prometida em 
-    casamento e esperava um filho.</i></p>
-    <p class="p"><i>Enquanto estavam lá, chegou o tempo de nascer o bebê, e ela deu à luz o seu primogênito. Envolveu-o em panos 
+    casamento e esperava um filho.</b></i></p>
+    <p class="p"><i><b>Enquanto estavam lá, chegou o tempo de nascer o bebê, e ela deu à luz o seu primogênito. Envolveu-o em panos 
     e o colocou numa manjedoura, porque não havia lugar para eles na hospedaria. Havia pastores que estavam nos campos 
     próximos e durante a noite tomavam conta dos seus rebanhos. E aconteceu que um anjo do Senhor apareceu-lhes e a glória 
-    do Senhor resplandeceu ao redor deles; e ficaram aterrorizados.</i></p>
-    <p class="p"><i>Mas o anjo lhes disse: "Não tenham medo. Estou trazendo boas-novas de grande alegria para vocês, que são para todo 
+    do Senhor resplandeceu ao redor deles; e ficaram aterrorizados.</b></i></p>
+    <p class="p"><i><b>Mas o anjo lhes disse: "Não tenham medo. Estou trazendo boas-novas de grande alegria para vocês, que são para todo 
     o povo: Hoje, na cidade de Davi, nasceu o Salvador, que é Cristo, o Senhor. Isto servirá de sinal para vocês: encontrarão 
     o bebê envolto em panos e deitado numa manjedoura". De repente, uma grande multidão do exército celestial apareceu com o 
-    anjo, louvando a Deus e dizendo:</i></p>
-    <p class="p"><i>"Glória a Deus nas alturas, e paz na terra aos homens aos quais ele concede o seu favor".</i></p>
+    anjo, louvando a Deus e dizendo:</b></i></p>
+    <p class="p"><i><b>Glória a Deus nas alturas, e paz na terra aos homens aos quais ele concede o seu 
+    favor.</b></i></p>
  
     <nav aria-label="Navegação de página exemplo" id="nav">
     <ul class="pagination">
